fix probel main

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>Vadim Kharovyuk</title>
     <link rel="stylesheet" href="My.css">
 </head>
-
 <body>
 <header>
-
     <nav class="navMain" >
         <ul>
             <li><a href="#">Home</a></li>
@@ -19,7 +17,6 @@
         </ul>
     </nav>
 </header>
-
 <main>
     <section class="hero">
         <div class="hero-content">
@@ -28,7 +25,6 @@
             <a href="#aboutme" class="cta">View My Work</a>
         </div>
     </section>
-
     <section class="about" id="aboutme">
         <h2>About Me</h2>
         <div class="about-content">
@@ -38,71 +34,61 @@
             </div>
             <div class="about-image">
                 <a href="https://t.me/name_lucky_lucky" id="telegram-link">
-                    <img src="/mainpic.jpg" alt="About Image">
+                    <img src="mainpic.jpg" alt="About Image">
                 </a>
             </div>
-
         </div>
     </section>
-
     <section class="photo-gallery">
         <div class="photo-wrapper">
-            <img src="/galereya4.JPG" alt="Photo 1">
-            <img src="/galereya2.JPG" alt="Photo 2">
-            <img src="/IMG_1635.JPG" alt="Photo 3">
-            <img src="/lena.JPG" alt="Photo 4">
-
+            <img src="galereya4.JPG" alt="Photo 1">
+            <img src="galereya2.JPG" alt="Photo 2">
+            <img src="IMG_1635.JPG" alt="Photo 3">
+            <img src="lena.JPG" alt="Photo 4">
         </div>
     </section>
-
-
     <section class="order">
         <br><br> <br>
-
         <h1 class="order-text" > I'm available for freelance work</h1><br>
         <button>
             <a href="mailto:harovyuk.vadim@icloud.com"><i class="fas fa-envelope"></i> Email Me</a>
         </button>
-
     </section>
-
-
-
     <section class="portfolio" id="Mywork">
         <h2 style="text-align: center">My Portfolio</h2>
         <div class="portfolio-items">
             <div class="portfolio-item">
-                <img src="/circle.JPG" alt="Project 1">
+                <img src="circle.JPG" alt="Project 1">
                 <h3>Китай 2015-2016</h3>
                 <p>У 2015–2016 роках я мав унікальну можливість працювати в Китаї у цирковому виставі. Це був дивовижний досвід, повний випробувань та нових відкриттів. У цьому захоплюючому світі я зміг використати свої навички повітряного гімнаста та створити виступи, які захоплювали дух глядачів. Робота в Китаї надала мені цінний досвід роботи у міжнародній команді та дозволила розширити мої професійні знання. Цей період залишиться незабутнім у моїй кар'єрі, і я вдячний за можливість зануритися у культуру та творчу енергію Китаю. </p>
                 <a href="https://www.youtube.com/watch?v=SBgQyhJwQnA&t=149s" class="portfolio-link">View Show</a>
             </div>
             <div class="portfolio-item">
-                <img src="/prof111.JPG" alt="Project 2">
+                <img src="prof111.JPG" alt="Project 2">
                 <h3>Китай 2016-2017</h3>
                 <p>У 2015–2016 роках я був частиною унікального театрального проекту в Китаї. Цей період був для мене неймовірним творчим зростанням і професійним розвитком. Робота в китайському театрі дала мені цінний досвід співпраці з місцевими артистами та режисерами, а також дозволила розширити мої горизонти в області сценічного мистецтва. Завдяки цій роботі я зміг поглибити знання про культуру Китаю та вивчити нові методи творчості. Цей досвід став для мене справжнім викликом, який допоміг мені стати кращим професіоналом і відкрити для себе нові горизонти в світі театрального мистецтва.</p>
                 <a href="https://www.youtube.com/watch?v=kBCr0VJm4o8" class="portfolio-link">View Project</a>
             </div>
             <div class="portfolio-item">
-                <img src="/port333.JPG" alt="Project 3">
+                <img src="port333.JPG" alt="Project 3">
                 <h3>Китай 2017-2018</h3>
                 <p>У період з 2017 по 2018 роки я мав унікальну можливість працювати в Китаї в цирковому виступі. Це був захоплюючий період у моїй кар'єрі, повний яскравих вражень і творчих досягнень. В цирку я навчався і працював над різними акробатичними номерами, брав участь у створенні та втіленні різноманітних хореографічних вставок. Цей досвід допоміг мені покращити свої навички воздушного гімнаста і розширити арсенал трюків та виступів. Робота в китайському цирку також дала мені можливість ознайомитися з унікальною культурою та традиціями цієї країни, що надихнуло мене на створення нових та захопливих вистав.</p>
                 <a href="https://www.youtube.com/watch?v=b-XltBFb74I" class="portfolio-link">View Project</a>
             </div>
             <div class="portfolio-item">
-                <img src="/port123.JPG" alt="Project 4">
+                <img src="port123.JPG" alt="Project 4">
                 <h3>Китай 2018-2019</h3>
                 <p>У період з 2018 по 2019 роки я приєднався до команди нічного клубу "Oscar" в Китаї, де продовжив свою творчу діяльність як воздушний гімнаст. Робота в нічному клубі була захоплюючим досвідом, який дав мені можливість не лише продемонструвати своє майстерство та талант на новій сцені, а й розширити свій художній арсенал. У "Oscar" я брав участь у створенні унікальних номерів, які поєднували в собі високий рівень акробатики, елегантність та харизму. Робота в нічному клубі надала мені цінний досвід взаємодії з аудиторією різних культур та національностей, що збагатило мій творчий шлях і надихнуло на нові творчі ідеї.</p>
                 <a href="https://www.youtube.com/watch?v=e1WU4-81VEY" class="portfolio-link">View Project</a>
             </div>
             <div class="portfolio-item">
-                <img src="/oscarDou.JPG" alt="Project 5">
+                <img src="oscarDou.JPG" alt="Project 5">
                 <h3>Турция 2020-2022</h3>
                 <p>У період з 2020 по 2022 роки я працював у Туреччині, де продовжив свою кар'єру воздушного гімнаста. Цей період був для мене значущим, оскільки Туреччина надала мені нові можливості для розвитку та самовираження. Робота в Туреччині подарувала мені незабутні враження і досвід, розширивши горизонти мого творчого росту та дозволивши втілити в життя нові ідеї і концепції в виступах. Я був частиною команди професіоналів, з якими вдалося створити захоплюючі та запам'ятовуючі номери, завоювавши серця глядачів. Робота в Туреччині стала для мене важливим етапом у моїй кар'єрі, що допомогло мені вирости як артисту та розкрити свій творчий потенціал.</p>
                 <a href="https://www.youtube.com/watch?v=5PEGOo0mizk" class="portfolio-link">View Project</a>
             </div>
             <div class="portfolio-item">
-                <img src="/port60.JPG" alt="Project 6">
+                <img src="port60.JPG" alt="Project 6">
                 <h3>Дубай 2022-2023</h3>
                 <p>У період з 2022 по 2023 роки я працював у Дубаї, де продовжив свою кар'єру в якості воздушного гімнаста. Робота в цьому світовому центрі розваг була для мене натхненним та захоплюючим досвідом. У Дубаї я брав участь у виступах у престижних розважальних комплексах, де міг демонструвати свої навички перед великою аудиторією з різних країн світу.
 
@@ -111,14 +97,12 @@
             </div>
         </div>
     </section>
-
     <section class="parallax-section" id="parallax">
         <div class="parallax-content">
             <h2>Пластика, пристрасть, професіоналізм: у кожному виступі - унікальність!</h2>
             <p>Його рухи виблискують витонченість і енергію, втілюючи пристрасть до свого мистецтва. </p>
         </div>
     </section>
-
     <div class="instagram-container">
         <div class="instagram-post">
             <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Ck9AZg1M7Mj/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
@@ -133,14 +117,12 @@
             </blockquote>
             <script async src="//www.instagram.com/embed.js"></script>
         </div>
-
         <div class="instagram-post">
             <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/B1Z6hYkgTZ8/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
                 <!-- Содержимое Instagram-поста -->
             </blockquote>
             <script async src="//www.instagram.com/embed.js"></script>
         </div>
-
         <div class="instagram-post">
             <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CsbsK90M8k_/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
                 <!-- Содержимое Instagram-поста -->
@@ -148,7 +130,6 @@
             <script async src="//www.instagram.com/embed.js"></script>
         </div>
     </div>
-
     <section class="contact-section" id="contactme">
         <h2>Contact Me</h2>
         <div class="contact-links">
@@ -159,9 +140,7 @@
 
         </div>
     </section>
-
 </main>
-
 <footer class="footer">
     <div class="sectionFooter1">
         <h3>Vadim Kharovyuk</h3>
@@ -169,25 +148,12 @@
     </div>
     <p> Portfolio. All rights reserved.</p>
     <p>&copy; 2022-2024  </p>
-
 </footer>
-
-
-
 <script>
     window.addEventListener('scroll', function() {
         let offset = window.pageYOffset;
         document.getElementById('parallax').style.backgroundPositionY = -offset * 0.5 + 'px'; // Изменение положения фонового изображения
     });
-
-</script>
-<script>
-    document.getElementById("telegram-link").addEventListener("click", function(event) {
-        event.preventDefault(); // Отмена стандартного поведения ссылки
-        // Добавьте здесь код для анимации перехода на вашу страницу в телеграме
-        window.location.href = "https://t.me/name_lucky_lucky"; // Переход на вашу страницу в телеграме
-    });
-
 </script>
 </body>
 </html>
