--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <br><br> <br>
         <h1 class="order-text" > I'm available for freelance work</h1><br>
         <button>
-            <a href="mailto:harovyuk.vadim@icloud.com"><i class="fas fa-envelope"></i> Email Me</a>
+            <a href="https://t.me/name_lucky_lucky" target="_blank"><i class="fab fa-telegram"></i> Write me</a>
         </button>
     </section>
     <section class="portfolio" id="Mywork">
