--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         <iframe width="320" height="180" src="https://www.youtube.com/embed/0lcB-0Xxmhc" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/t6Fc_R26btY" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/XgIzEC4yHJA" frameborder="0" allowfullscreen></iframe>
+        <iframe width="320" height="180" src="https://www.youtube.com/embed/sbsQ1y_I54k" frameborder="0" allowfullscreen></iframe>
+
         <!-- Добавьте еще 2 iframe для остальных видео -->
     </div>
 
