--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <script async src="//www.instagram.com/embed.js"></script>
         </div>
     </div>
-    <div class="youtube-container">
+    <div class="youtube-container" style="background-color: #070707">
         <iframe width="320" height="180" src="https://www.youtube.com/embed/QJAST4Qly-s" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/x4F23X49uDY" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/0lcB-0Xxmhc" frameborder="0" allowfullscreen></iframe>
