--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     </div>
     <div class="youtube-container" style="background-color: #010711">
         <iframe width="320" height="180" src="https://www.youtube.com/embed/QJAST4Qly-s" frameborder="0" allowfullscreen></iframe>
+        <iframe width="320" height="180" src="https://www.youtube.com/embed/zJ2JXtMPjBo?si=5a_PUahI6urV8Si1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/x4F23X49uDY" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/0lcB-0Xxmhc" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/t6Fc_R26btY" frameborder="0" allowfullscreen></iframe>
