--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <iframe width="320" height="180" src="https://www.youtube.com/embed/t6Fc_R26btY" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/XgIzEC4yHJA" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/sbsQ1y_I54k" frameborder="0" allowfullscreen></iframe>
+        <iframe width="320" height="180" src="https://www.youtube.com/embed/vxANR0QtDHM?si=wBJh9CsqMgOCKvhA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         <!-- Добавьте еще 2 iframe для остальных видео -->
     </div>
