--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#aboutme">About</a></li>
             <li><a href="#Mywork">Portfolio</a></li>
+            <li><a href="#youtube">YouTube</a></li>
             <li><a href="#contactme">Contact</a></li>
         </ul>
     </nav>
@@ -128,7 +129,7 @@
             <script async src="//www.instagram.com/embed.js"></script>
         </div>
     </div>
-    <div class="youtube-container" style="background-color: #010711">
+    <div class="youtube-container" style="background-color: #010711" id="youtube">
         <iframe width="320" height="180" src="https://www.youtube.com/embed/QJAST4Qly-s" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/zJ2JXtMPjBo?si=5a_PUahI6urV8Si1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/x4F23X49uDY" frameborder="0" allowfullscreen></iframe>
@@ -137,11 +138,8 @@
         <iframe width="320" height="180" src="https://www.youtube.com/embed/XgIzEC4yHJA" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/sbsQ1y_I54k" frameborder="0" allowfullscreen></iframe>
         <iframe width="320" height="180" src="https://www.youtube.com/embed/vxANR0QtDHM?si=wBJh9CsqMgOCKvhA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
         <!-- Добавьте еще 2 iframe для остальных видео -->
     </div>
-
-
     <section class="contact-section" id="contactme">
         <h2>Contact Me</h2>
         <div class="contact-links">
