--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#Mywork">Portfolio</a></li>
             <li><a href="#youtube">YouTube</a></li>
             <li><a href="#contactme">Contact</a></li>
+            <li><button id="themeToggle" aria-label="Toggle theme">🌓</button></li>
         </ul>
     </nav>
 </header>
@@ -164,6 +165,25 @@
     window.addEventListener('scroll', function() {
         let offset = window.pageYOffset;
         document.getElementById('parallax').style.backgroundPositionY = -offset * 0.5 + 'px'; // Изменение положения фонового изображения
+    });
+</script>
+<script>
+    // Получаем элемент переключателя темы и устанавливаем текущую тему
+    const themeToggleButton = document.getElementById('themeToggle');
+    const currentTheme = localStorage.getItem('theme') || 'light-theme';
+    document.body.classList.add(currentTheme);
+
+    themeToggleButton.addEventListener('click', () => {
+        // Переключаем класс темы
+        if (document.body.classList.contains('light-theme')) {
+            document.body.classList.remove('light-theme');
+            document.body.classList.add('dark-theme');
+            localStorage.setItem('theme', 'dark-theme');
+        } else {
+            document.body.classList.remove('dark-theme');
+            document.body.classList.add('light-theme');
+            localStorage.setItem('theme', 'light-theme');
+        }
     });
 </script>
 </body>
